# iSLAT

./: .gitignore  CHANGELOG.MD  CHANGELONG.MD  Create_HITRAN_files.py  Create_ir_model_HITRANfiles.py  Hitran_data.py  README.md  Start.py  chart_window.py  global_identifier.py  hitran_downloader.py  hitran_utils.py  iSLAT-V3.05.00.py  iSLAT-V3.06.00.py  iSLAT-V3.06.01.py  iSLAT-V3.07.00.py  iSLAT-V3.08.00.py  iSLAT-V3.09.00.py  iSLAT-V3.10.00.py  iSLAT-launch.py  iSLAT.py  line_data_writer.py  partition_function_writer.py  pyproject.toml  requirements.txt  setup.py
ATOMLINES/: Extra_line_list.csv
Examples/Notebooks/: ExampleOne.ipynb  Info.MD  MoleculeDict_Examples.ipynb  Plotting_Examples.ipynb
iSLAT/: Constants.py  __init__.py  iSLAT-V3.10.00.py  iSLAT.py  iSLATClass.py
iSLAT/ATOMLINES/: Atomic_line_list.csv
iSLAT/COMPONENTS/: Hitran_data.py  chart_window.py  global_identifier.py  hitran_downloader.py  hitran_utils.py  line_data_writer.py  partition_function_writer.py  slabfit_config.py  slabfit_loader.py  slabfit_runner.py
iSLAT/EXAMPLE-data/: CITau_1d_v6.2_contsub.csv  CITau_MIRI_Banzatti+2023b.csv  FZTau_ISH_M_jan22_contsub.csv  FZTau_MIRI_Pontoppidan+2024.csv
iSLAT/HITRANdata/: data_Arabhavi_2024_C3H4.par  data_Changala_2023_CH3+.par
iSLAT/LINELISTS/: Atomic_lines.csv  MIRI_H2O_ortho-para-pairs.csv  MIRI_H2O_v1-0.csv  MIRI_H2O_v1-1.csv  MIRI_general_Banzatti+2024.csv  MIRI_general_Banzatti+2025.csv  cont_ranges_Banzatti+2025.csv
iSLAT/LINESAVES/: MIRI_H2O_ortho-para-pairs.csv  MIRI_H2O_v0-0.csv  MIRI_H2O_v1-0.csv  MIRI_H2O_v1-1.csv
iSLAT/Modules/: Hitran_data.py  __init__.py
iSLAT/ir_model/: __init__.py  chi2spectrum.py  (+3 more)
ir_model/: chi2spectrum.py  constants.py  spectrum.py
(+124 files in other folders)
